Also create subsequences for leaf stacking contexts

We didn't create subsequences for leaf stacking contexts to reduce
number of subsequences. This was useful when we created paired display
items for subsequences to reduce memory and cpu usage for subsequences.

Now that we no longer create paired display items for subsequences,
this CL removes the optimization to reduce changes of existence of
subsequences causing full chunk raster invalidation on SPv2.

Cluster telemetry results [1][2] showed that this patch slightly
degraded performance of record_time_painting_disabled by about 0.6%,
while had no significant effect on other results.

[1] https://ct.skia.org/results/cluster-telemetry/tasks/chromium_perf_runs/wangxianzhu-20170822215458/html/index.html
[2] https://ct.skia.org/results/cluster-telemetry/tasks/chromium_perf_runs/wangxianzhu-20170822215428/html/index.html
BUG=757082

Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I3518b103a5ea354c9eb780a75f5dc4b86763e874
Reviewed-on: https://chromium-review.googlesource.com/627027
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497209}
Former-commit-id: 1db10196d999bf95545aaa30da897e9eb6a26b60