third_party/WebKit/Source/core/paint/PaintLayerTest.cpp
@@ -312,23 +312,23 @@ TEST_P(PaintLayerTest, SubsequenceCachingStackingContexts) {
   SetBodyInnerHTML(
       "<div id='parent' style='position:relative'>"
       "  <div id='child1' style='position: relative'>"
-      "    <div id='grandchild1' style='position: relative'>"
-      "      <div style='position: relative'></div>"
-      "    </div>"
+      "    <div id='grandchild1' style='position: relative'></div>"
       "  </div>"
       "  <div id='child2' style='isolation: isolate'>"
-      "    <div style='position: relative'></div>"
+      "    <div id='grandchild2' style='position: relative'></div>"
       "  </div>"
       "</div>");
   PaintLayer* parent = GetPaintLayerByElementId("parent");
   PaintLayer* child1 = GetPaintLayerByElementId("child1");
   PaintLayer* child2 = GetPaintLayerByElementId("child2");
   PaintLayer* grandchild1 = GetPaintLayerByElementId("grandchild1");
+  PaintLayer* grandchild2 = GetPaintLayerByElementId("grandchild2");
 
   EXPECT_FALSE(parent->SupportsSubsequenceCaching());
   EXPECT_FALSE(child1->SupportsSubsequenceCaching());
   EXPECT_TRUE(child2->SupportsSubsequenceCaching());
   EXPECT_FALSE(grandchild1->SupportsSubsequenceCaching());
+  EXPECT_FALSE(grandchild2->SupportsSubsequenceCaching());
 
   GetDocument()
       .getElementById("grandchild1")
@@ -339,6 +339,7 @@ TEST_P(PaintLayerTest, SubsequenceCachingStackingContexts) {
   EXPECT_FALSE(child1->SupportsSubsequenceCaching());
   EXPECT_TRUE(child2->SupportsSubsequenceCaching());
   EXPECT_TRUE(grandchild1->SupportsSubsequenceCaching());
+  EXPECT_FALSE(grandchild2->SupportsSubsequenceCaching());
 }
 
 TEST_P(PaintLayerTest, SubsequenceCachingSVGRoot) {
